Changes for 1.0.13

 - [NTD-59] DM: fixed memory leak in synchronization of node configuration (Sasha)
 - [NTD-60] fixed rare race condition in DBimplode_exp (Sasha)
 - [NTD-57] fixed wrong message on delete of maintenance period (Sasha)
 - [NTD-58] fixed cleanup of open file descriptor (Sasha)

Changes for 1.0.12

 - [NTD-35] fixed compilation problems under Solaris 6/8 (Sasha)
 - [NTD-49,NTD-53,NTD-30,NTD-51] fixed problem with "Too many open files" by agent under Solaris and AIX (Sasha)

Changes for 1.0.11

 - [NTD-44] fixed compilation problems under FreeBSD 4.2 (Sasha)

Changes for 1.0.10

 - [NTD-48] added support of system.swap.size under FreeBSD (Sasha)
 - [ZBX-623] fixed incorrect processing of function abschange() for integers (Sasha)

Changes for 1.0.9

 - [NTD-43] fixed wrong help links by pointing to correct page with manual (Artem)

Changes for 1.0.8

 - [NTD-42] fixed pages error (Artem)
 - [NTD-39] fixed filter reset button (Artem)

Changes for 1.0.7

 - [NTD-41] fixed popup menu (Artem)
 - [NTD-29] fixed popup menu (Artem)

Changes for 1.0.6

 - [NTD-37] fixed fonts in the maps (Artem)
 - [ZBX-619] fixed agent crash for system.uptime under Solaris 2.5.1 (Sasha)
 - [ZBX-610] fixed memory leak in external checks (Sasha)

Changes for 1.0.5

 - [NTD-34] fixed problem with net.tcp.dns under AIX (Sasha)

Changes for 1.0.4

 - [NTD-26] fixed problem with iconv under AIX (Sasha)

Changes for 1.0.3

 - [NTD-36] fixed template linkage (Artem)
 - [NTD-28] fixed errors on maps (Artem)

Changes for 1.0.2

 - [DEV-137] fixed call DBfree_resut before return from send_list_of_active_checks (Sasha)

Changes for 1.0.1:

 - [DEV-230] changed ZABBIX notation to ZABICOM (Sasha)
 - [ZBX-602] fixed possible incorrect trigger evaluation if value sotred as "delta" (Sasha)

Changes for 1.0.0:

 - [DEV-242] added improved map configuration (Artem)
 - [DEV-250] added support of vm.memory.size under AIX (Sasha)